--- a/chestX-ray.ipynb
+++ b/chestX-ray.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "923ca284-a2ea-453f-b23e-8833b805a31b",
    "metadata": {},
    "outputs": [
@@ -18,55 +18,85 @@
       "Indexed files: 112120\n",
       "Missing among first 20: 0\n",
       "DL sizes -> 89826 11679 10615\n",
-      "Resuming from epoch 18 (best_auc=0.8579)\n"
+      "Resuming from epoch 31 (best_auc=0.8579)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 18/20: 100%|██████████| 2808/2808 [18:34<00:00,  2.52it/s]\n"
+      "Epoch 31/50:  30%|██▉       | 829/2808 [05:09<13:32,  2.43it/s]Traceback (most recent call last):\n",
+      "  File \"/usr/lib/python3.10/multiprocessing/queues.py\", line 239, in _feed\n",
+      "    reader_close()\n",
+      "  File \"/usr/lib/python3.10/multiprocessing/connection.py\", line 177, in close\n",
+      "    self._close()\n",
+      "  File \"/usr/lib/python3.10/multiprocessing/connection.py\", line 361, in _close\n",
+      "    _close(self._handle)\n",
+      "OSError: [Errno 9] Bad file descriptor\n",
+      "Epoch 31/50: 100%|██████████| 2808/2808 [17:24<00:00,  2.69it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Val] mean AUROC=0.8364 | microF1=0.2410 | macroF1=0.2181 | train_loss=0.9114\n",
-      " Saved last: densenet121_last.pt (epoch=18)\n"
+      "[Val] mean AUROC=0.8478 | microF1=0.2964 | macroF1=0.2704 | train_loss=0.6921\n",
+      " Saved last: densenet121_last.pt (epoch=31)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 19/20: 100%|██████████| 2808/2808 [18:30<00:00,  2.53it/s]\n"
+      "Epoch 32/50: 100%|██████████| 2808/2808 [17:40<00:00,  2.65it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Val] mean AUROC=0.8256 | microF1=0.2100 | macroF1=0.2071 | train_loss=0.9224\n",
-      " Saved last: densenet121_last.pt (epoch=19)\n"
+      "[Val] mean AUROC=0.8473 | microF1=0.2944 | macroF1=0.2640 | train_loss=0.6925\n",
+      " Saved last: densenet121_last.pt (epoch=32)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 20/20: 100%|██████████| 2808/2808 [18:20<00:00,  2.55it/s]\n"
+      "Epoch 33/50: 100%|██████████| 2808/2808 [17:36<00:00,  2.66it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Val] mean AUROC=0.8196 | microF1=0.2434 | macroF1=0.2180 | train_loss=0.9067\n",
-      " Saved last: densenet121_last.pt (epoch=20)\n",
-      " Loaded BEST from epoch 11 (best_auc=0.8579)\n",
-      "[TEST] mean AUROC=0.8606 | microF1=0.2677 | macroF1=0.2526\n",
-      "Per-class AUROC: {'Atelectasis': 0.8157046667850688, 'Cardiomegaly': 0.9410573598319599, 'Effusion': 0.8860951507104899, 'Infiltration': 0.6986046944590047, 'Mass': 0.8599246331526968, 'Nodule': 0.7936213649358839, 'Pneumonia': 0.8078863298109334, 'Pneumothorax': 0.8893055947526689, 'Consolidation': 0.8381257189231456, 'Edema': 0.9095466667595384, 'Emphysema': 0.9481564363560316, 'Fibrosis': 0.8508452414308396, 'Pleural_Thickening': 0.8166046463704607, 'Hernia': 0.9928841479881177}\n"
+      "[Val] mean AUROC=0.8468 | microF1=0.2982 | macroF1=0.2716 | train_loss=0.6978\n",
+      " Saved last: densenet121_last.pt (epoch=33)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Epoch 34/50:  72%|███████▏  | 2012/2808 [12:23<04:54,  2.71it/s]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 254\u001b[0m\n\u001b[1;32m    252\u001b[0m model\u001b[38;5;241m.\u001b[39mtrain()\n\u001b[1;32m    253\u001b[0m running_loss \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[0;32m--> 254\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m xb, yb \u001b[38;5;129;01min\u001b[39;00m tqdm(train_dl, desc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEpoch \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mep\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEPOCHS\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m    255\u001b[0m     xb, yb \u001b[38;5;241m=\u001b[39m xb\u001b[38;5;241m.\u001b[39mto(DEVICE, non_blocking\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m), yb\u001b[38;5;241m.\u001b[39mto(DEVICE, non_blocking\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m    256\u001b[0m     optimizer\u001b[38;5;241m.\u001b[39mzero_grad(set_to_none\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/tqdm/std.py:1182\u001b[0m, in \u001b[0;36mtqdm.__iter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1179\u001b[0m time \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_time\n\u001b[1;32m   1181\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1182\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m obj \u001b[38;5;129;01min\u001b[39;00m iterable:\n\u001b[1;32m   1183\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m obj\n\u001b[1;32m   1184\u001b[0m         \u001b[38;5;66;03m# Update and possibly print the progressbar.\u001b[39;00m\n\u001b[1;32m   1185\u001b[0m         \u001b[38;5;66;03m# Note: does not call self.update(1) for speed optimisation.\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:630\u001b[0m, in \u001b[0;36m_BaseDataLoaderIter.__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    627\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_sampler_iter \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    628\u001b[0m     \u001b[38;5;66;03m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[39;00m\n\u001b[1;32m    629\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reset()  \u001b[38;5;66;03m# type: ignore[call-arg]\u001b[39;00m\n\u001b[0;32m--> 630\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_next_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    631\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    632\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    633\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \\\n\u001b[1;32m    634\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_num_yielded \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_IterableDataset_len_called:\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:1328\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1325\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_process_data(data)\n\u001b[1;32m   1327\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_shutdown \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_tasks_outstanding \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m-> 1328\u001b[0m idx, data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1329\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_tasks_outstanding \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m   1330\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_dataset_kind \u001b[38;5;241m==\u001b[39m _DatasetKind\u001b[38;5;241m.\u001b[39mIterable:\n\u001b[1;32m   1331\u001b[0m     \u001b[38;5;66;03m# Check for _IterableDatasetStopIteration\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:1284\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._get_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1282\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory:\n\u001b[1;32m   1283\u001b[0m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_pin_memory_thread\u001b[38;5;241m.\u001b[39mis_alive():\n\u001b[0;32m-> 1284\u001b[0m         success, data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_try_get_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1285\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m success:\n\u001b[1;32m   1286\u001b[0m             \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
+      "File \u001b[0;32m/usr/local/lib/python3.10/dist-packages/torch/utils/data/dataloader.py:1132\u001b[0m, in \u001b[0;36m_MultiProcessingDataLoaderIter._try_get_data\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m   1119\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_try_get_data\u001b[39m(\u001b[38;5;28mself\u001b[39m, timeout\u001b[38;5;241m=\u001b[39m_utils\u001b[38;5;241m.\u001b[39mMP_STATUS_CHECK_INTERVAL):\n\u001b[1;32m   1120\u001b[0m     \u001b[38;5;66;03m# Tries to fetch data from `self._data_queue` once for a given timeout.\u001b[39;00m\n\u001b[1;32m   1121\u001b[0m     \u001b[38;5;66;03m# This can also be used as inner loop of fetching without timeout, with\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1129\u001b[0m     \u001b[38;5;66;03m# Returns a 2-tuple:\u001b[39;00m\n\u001b[1;32m   1130\u001b[0m     \u001b[38;5;66;03m#   (bool: whether successfully get data, any: data if successful else None)\u001b[39;00m\n\u001b[1;32m   1131\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 1132\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_data_queue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1133\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m (\u001b[38;5;28;01mTrue\u001b[39;00m, data)\n\u001b[1;32m   1134\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m   1135\u001b[0m         \u001b[38;5;66;03m# At timeout and error, we manually check whether any worker has\u001b[39;00m\n\u001b[1;32m   1136\u001b[0m         \u001b[38;5;66;03m# failed. Note that this is the only mechanism for Windows to detect\u001b[39;00m\n\u001b[1;32m   1137\u001b[0m         \u001b[38;5;66;03m# worker failures.\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/lib/python3.10/queue.py:180\u001b[0m, in \u001b[0;36mQueue.get\u001b[0;34m(self, block, timeout)\u001b[0m\n\u001b[1;32m    178\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m remaining \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m:\n\u001b[1;32m    179\u001b[0m             \u001b[38;5;28;01mraise\u001b[39;00m Empty\n\u001b[0;32m--> 180\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnot_empty\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwait\u001b[49m\u001b[43m(\u001b[49m\u001b[43mremaining\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    181\u001b[0m item \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get()\n\u001b[1;32m    182\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnot_full\u001b[38;5;241m.\u001b[39mnotify()\n",
+      "File \u001b[0;32m/usr/lib/python3.10/threading.py:324\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    322\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    323\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m timeout \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m--> 324\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m \u001b[43mwaiter\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43macquire\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    325\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    326\u001b[0m         gotit \u001b[38;5;241m=\u001b[39m waiter\u001b[38;5;241m.\u001b[39macquire(\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -163,13 +193,35 @@
     "\n",
     "# ========================== 6) DATASET / DATALOADERS ==========================\n",
     "IMG_SIZE = 384\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# train_tfms = transforms.Compose([\n",
+    "#     transforms.Resize(int(IMG_SIZE*1.1)),\n",
+    "#     transforms.RandomResizedCrop(IMG_SIZE, scale=(0.8,1.0)),\n",
+    "#     transforms.RandomHorizontalFlip(),\n",
+    "#     transforms.ToTensor(),\n",
+    "#     transforms.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225]),\n",
+    "# ])\n",
+    "\n",
+    "\n",
     "train_tfms = transforms.Compose([\n",
-    "    transforms.Resize(int(IMG_SIZE*1.1)),\n",
-    "    transforms.RandomResizedCrop(IMG_SIZE, scale=(0.8,1.0)),\n",
+    "    transforms.Resize(420),\n",
+    "    transforms.RandomRotation(degrees=7),\n",
+    "    transforms.RandomAffine(degrees=0, translate=(0.02,0.02), scale=(0.95,1.05)),\n",
+    "    transforms.CenterCrop(IMG_SIZE),\n",
     "    transforms.RandomHorizontalFlip(),\n",
     "    transforms.ToTensor(),\n",
     "    transforms.Normalize([0.485,0.456,0.406],[0.229,0.224,0.225]),\n",
     "])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "val_tfms = transforms.Compose([\n",
     "    transforms.Resize(IMG_SIZE),\n",
     "    transforms.CenterCrop(IMG_SIZE),\n",
@@ -263,7 +315,7 @@
     "best_path = \"densenet121_best.pt\"\n",
     "last_path = \"densenet121_last.pt\"\n",
     "RESUME    = True\n",
-    "EPOCHS    = 20\n",
+    "EPOCHS    = 50\n",
     "\n",
     "def make_ckpt(epoch, best_auc):\n",
     "    return {\n",
@@ -338,28 +390,12 @@
     "print(f\"[TEST] mean AUROC={test_mean_auc:.4f} | microF1={test_micro_f1:.4f} | macroF1={test_macro_f1:.4f}\")\n",
     "print(\"Per-class AUROC:\", {k: (None if np.isnan(v) else float(v)) for k, v in test_per_cls.items()})\n",
     "\n",
-    "# ========================== 12) (Optional) SINGLE-IMAGE PREDICT ==========================\n",
-    "@torch.no_grad()\n",
-    "def predict_image(img_path, threshold=0.5, top_k=5):\n",
-    "    model.eval()\n",
-    "    img = Image.open(img_path).convert(\"RGB\")\n",
-    "    x = val_tfms(img).unsqueeze(0).to(DEVICE)\n",
-    "    probs = torch.sigmoid(model(x)).squeeze(0).cpu().numpy()\n",
-    "    pred_labels = [LABELS[i] for i, p in enumerate(probs) if p >= threshold]\n",
-    "    top_idx = np.argsort(-probs)[:top_k]\n",
-    "    top = [(LABELS[i], float(probs[i])) for i in top_idx]\n",
-    "    return dict(zip(LABELS, map(float, probs))), pred_labels, top\n",
-    "\n",
-    "# Example:\n",
-    "# img_example = \"/chest-xray/images_001/images/00001335_006.png\"\n",
-    "# probs, preds, top5 = predict_image(img_example, threshold=0.5, top_k=5)\n",
-    "# print(\"Predicted (>=0.5):\", preds)\n",
-    "# print(\"Top-5:\", top5)\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "678b8119-6027-4d64-aa2c-7159a2e8d29a",
    "metadata": {},
    "outputs": [
@@ -379,12 +415,12 @@
     }
    ],
    "source": [
-    "!git status\n"
+    "!git status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "e22c8e05-e6de-47b6-9ccb-820b87c6a784",
    "metadata": {},
    "outputs": [],
@@ -394,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "aef187b1-554e-4856-9dbe-25773af42848",
    "metadata": {},
    "outputs": [
@@ -402,20 +438,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main f3fc19d] second session\n",
-      " 2 files changed, 974 insertions(+), 2390 deletions(-)\n",
-      " rewrite .ipynb_checkpoints/chestX-ray-checkpoint.ipynb (93%)\n",
-      " rewrite chestX-ray.ipynb (74%)\n"
+      "On branch main\n",
+      "Changes not staged for commit:\n",
+      "  (use \"git add <file>...\" to update what will be committed)\n",
+      "  (use \"git restore <file>...\" to discard changes in working directory)\n",
+      "\t\u001b[31mmodified:   chestX-ray.ipynb\u001b[m\n",
+      "\n",
+      "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
     }
    ],
    "source": [
-    "! git commit -m \"second session\""
+    "! git commit -m \"updating the train_tfms \""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "a1a220b6-c54f-4dd2-9c99-909162868c0c",
    "metadata": {},
    "outputs": [
@@ -423,15 +462,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 7, done.\n",
-      "Counting objects: 100% (7/7), done.\n",
+      "Enumerating objects: 9, done.\n",
+      "Counting objects: 100% (8/8), done.\n",
       "Delta compression using up to 96 threads\n",
-      "Compressing objects: 100% (4/4), done.\n",
-      "Writing objects: 100% (4/4), 7.43 KiB | 7.43 MiB/s, done.\n",
-      "Total 4 (delta 2), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 6.12 KiB | 6.12 MiB/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (3/3), completed with 2 local objects.\u001b[K\n",
       "To github.com:MatinM-96/Chest-X-ray.git\n",
-      "   6045f7f..f3fc19d  main -> main\n"
+      "   f3fc19d..6a922a3  main -> main\n"
      ]
     }
    ],
